fixng for box highlight jump

--- a/projects/media-viewer/src/assets/sass/annotation-set.scss
+++ b/projects/media-viewer/src/assets/sass/annotation-set.scss
@@ -51,8 +51,8 @@ mv-annotation-set {
     top: 0;
     &__page {
       border: 1px solid transparent; // fix for text-highlight mispositioned
+      background-color: transparent;
       margin: 0 auto 8px auto;
-      overflow: visible;
       position: relative;
     }
 
